修复一些布局bug和iframe显示bug

--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -1,2 +1,11 @@
 @import "./splitPane";
 @import "./editor";
+@import "./preview";
+
+html, body {
+  height: 100%;
+}
+
+#root, #root .App {
+  height: 100%;
+}
