--- a/src/assets/less/editor.less
+++ b/src/assets/less/editor.less
@@ -1,13 +1,25 @@
-.element-list {
-  user-select: none;
+.sapp-editor {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  .sapp-editor-main{
+    flex: 1;
+    position: relative;
 
-  .sapp-list {
-    .sapp-list-cell .element > * {
-      text-align: left;
-      padding: 11px 24px;
-      text-decoration: none;
-      line-height: 1.75;
-      cursor: move;
+    .element-list {
+      user-select: none;
+
+      .sapp-list {
+        .sapp-list-cell .element > * {
+          text-align: left;
+          padding: 11px 24px;
+          text-decoration: none;
+          line-height: 1.75;
+          cursor: move;
+        }
+      }
     }
   }
 }
